added api routes

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,7 @@
         Options -MultiViews
     </IfModule>
 
+
     RewriteEngine On
 
     # Redirect Trailing Slashes If Not A Folder...
@@ -18,4 +19,12 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+ 
+ <Limit GET POST PUT DELETE>
+ Allow from all
+</Limit>
+
+
 </IfModule>
+
+
