--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "^7.2.10",
     "@angular/cdk": "^7.3.6",
     "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
+    "@angular/compiler": "^7.2.12",
     "@angular/core": "^7.2.10",
     "@angular/forms": "^7.2.10",
     "@angular/http": "^7.2.10",
@@ -28,11 +28,12 @@
     "jspdf": "^1.5.3",
     "ng2-pdf-viewer": "^5.2.3",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.8",
-    "@angular/cli": "^7.3.6",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.10",
     "@angular/language-service": "^7.2.10",
     "@types/jasmine": "~2.8.8",
