--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "@angular/animations": "^7.2.12",
+        "@angular/cdk": "^7.3.7",
+        "@angular/material": "^7.3.7"
     }
 }
